add Stream Operations example and Practice